Fix tooltip overflow when displaying long title without space

--- a/packages/polaris-viz/src/components/TooltipContent/components/TooltipTitle/TooltipTitle.scss
+++ b/packages/polaris-viz/src/components/TooltipContent/components/TooltipTitle/TooltipTitle.scss
@@ -3,4 +3,5 @@
   font-weight: 500;
   line-height: 20px;
   margin: 0;
+  overflow-wrap: break-word;
 }
